# Oracle

./: .gitmodules  Cargo.toml  LICENSE  README.md  build.rs
src/: alu.rs  arch.rs  bus.rs  core.rs  csr.rs  device.rs  execute.rs  lib.rs  loader.rs  packet.rs
src/decode/: mod.rs  uop.rs
tests/: core_integration.rs  decode.rs  elf_loader.rs  eos_demos.rs  hermes_bridge.rs  riscv_tests.rs
