[package]
name = "iss-core"
version = "0.1.0"
edition = "2021"
rust-version = "1.70"
description = "RV32I_Zicsr instruction-set-simulator Core (pure CPU FSM) — Rust rewrite of comporg-labs/iss"
license = "MIT"

[lib]
name = "iss_core"
path = "src/lib.rs"

[dependencies]
elf = { version = "0.7.4", default-features = false, features = ["std"] }
# The SoC fabric, devices, and the shared AXI vocabulary (AxiResp/Width/Slverr,
# MmioDevice, MemoryMap, le_load/le_store) live in the Hermes submodule. ISS
# re-exports them rather than redefining its own divergent copies.
hermes = { path = "Hermes" }

[lints.clippy]
# The decoder and CSR file deliberately spell out every RV32I encoding;
# allow the resulting breadth rather than collapsing it into terse tables.
too_many_arguments = "allow"
